<resources>
    <string name="facebook_app_id">2459794954232593</string>
    <string name="fb_login_protocol_scheme">fb2459794954232593</string>
    <string name="app_name">Tatayab</string>
    <string name="tatayab_app_name_pro">Tatayab</string>
    <string name="tatayab_app_name_dev">Tatayab Dev</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="concierge">Concierge</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="Login">LOGIN</string>
    <string name="register">Register</string>
    <string name="brands">Brands</string>
    <string name="my_orders">My Orders</string>
    <string name="livechat">Live Chat</string>
    <string name="instagram">Instagram</string>
    <string name="logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="Login_text">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or"> or </string>
    <string name="dont_have_account"><![CDATA[
Don\'t have an Account ? <font color="#A67C52">Sign Up</font>
]]></string>
    <string name="shipping_from">"Shipping from "</string>
    <string name="have_account_singin"><![CDATA[
Already have an Account ? <font color="#A67C52">Sign in</font>
]]></string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="forgetten_password">Forget  Password</string>
    <string name="reset_password_text">RESET YOUR PASSWORD</string>
    <string name="wrong_email">Invalid email</string>
    <string name="one_click_pay">One\nclick\npay</string>
    <string name="one_click_pay_plain">One click pay</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="all" formatted="false">%%2d %d d</string>
    <string name="off" formatted="false">OFF</string>
    <string name="free_delivery">Free delivery</string>
    <string name="kwd">%1$s KWD</string>
    <string name="currency">%1$s %2$s</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_phone">Mobile</string>
    <string name="signup_text">SIGN UP NOW</string>
    <string name="please_enter_fullname">Please add a full name (first name and family name)</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_enter_phone">Please enter phone number</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="failed_to_deauth">"failed to deauthorize app %1s"</string>
    <string name="twitter_consumer_key" translatable="false">hqiC3uu3uZptwAwuUTgOPOw3v</string>
    <string name="twitter_consumer_secret" translatable="false">7cBt2o59trMci201nyIjoj5A0nk67ahwnS15MSee0gHNjndHA7</string>
    <string name="instagram_app_id" translatable="false">719385335223960</string>
    <string name="instagram_app_secret" translatable="false">c1f4684a12bc5f4684e82bcff73c4d0b</string>
    <string name="customer_also_bought">CUSTOMER\'S ALSO BOUGHT</string>
    <string name="profile">Profile</string>
    <string name="profile_nav">Profile</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="no_addresses">No Addresses found!</string>
    <string name="hint_country">Country</string>
    <string name="hint_address">Address : </string>
    <string name="hint_city">City : </string>
    <string name="hint_zipcode">ZIP</string>
    <string name="add">Add</string>
    <string name="add_new_address">Add new address</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="hint_billing_address">Billing Address</string>
    <string name="hint_shipping_address">Shipping Address</string>
    <string name="default_address">Default</string>
    <string name="edit">Change</string>
    <string name="save">Save</string>
    <string name="my_account">Account</string>
    <string name="address">Addresses</string>
    <string name="payment">Payment</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="sign_out">Sign out</string>
    <string name="general_info">GENERAL INFORMATION</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup">Sign up</string>
    <string name="reachout">REACH OUT TO US</string>
    <string name="help">Help</string>
    <string name="contactus">Contact Us</string>
    <string name="trends_in_tatybe">TRENDING ON TATAYAB</string>
    <string name="feature_products">FEATURED PRODUCTS</string>
    <string name="home_fragrances">HOME FRAGRANCES</string>
    <string name="french_perfum">FRENCH PERFUMS</string>
    <string name="mini_world">MINI WORLD</string>
    <string name="mubkhars">MUBKHARS</string>
    <string name="personal_care">PERSONAL CARE</string>
    <string name="bukhar">BUKHOR</string>
    <string name="see_more_brands">See More</string>
    <string name="overview">OverView</string>
    <string name="reviewers">Reviewers</string>
    <string name="review"> Review </string>
    <string name="select_country">Select a country </string>
    <string name="select_currency">Select Currency</string>
    <string name="aboutus">About Us</string>
    <string name="welcome_messege">WELCOME TO TATAYAB - WHERE THRE\'S A SCENT FOR EVERY MOOD YOUR ONLINE APPLICATION FOR PERFUM ,HOME FRAGRANCES BUKHOUR AND MORE.</string>
    <string name="countries">Countries</string>
    <string name="currencies">Currencies</string>
    <string name="out_of_stock">Sold Out</string>
    <string name="checkout_now">CHECKOUT NOW</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Delivery</string>
    <string name="quantity">Quantity</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="vat">Vat</string>
    <string name="custom_duties">Custom duties</string>
    <string name="continue_to_payment">Continue to checkout</string>
    <string name="enter_coupon_code">Enter coupon Code</string>
    <string name="total">Total</string>
    <plurals name="number_of_items">
        <item quantity="one"> Total (%d item)</item>
        <item quantity="other"> Total (%d items)</item>
    </plurals>
    <string name="hint_Perfume_Name">Product name</string>
    <string name="hint_comment">Comment</string>
    <string name="add_img">Perfume picture</string>
    <string name="select_perfum_img">Select perfum Image</string>
    <string name="hint_upload_perfum_img">Upload Perfum Image(optional)</string>
    <string name="success_Concierince_title">Thanks for using Tatayab Concierge!</string>
    <string name="concierge_process">One of our customer care has been deployed to follow up on your request. Expect our call in the next 24 hours</string>
    <string name="ok">OK</string>
    <string name="contine">CONTINUE</string>
    <string name="completedata">Complete your data</string>
    <string name="select_from_galery">Select photo from gallery</string>
    <string name="select_from_camera">Capture photo from camera</string>
    <string name="product_reviewers_title"><![CDATA[Product Rating & Reviews]]></string>
    <string name="by">By</string>
    <string name="rating"> Rating </string>
    <string name="no_reviwers">No Reviews found for this product</string>
    <string name="Overview">Overview</string>
    <string name="Reviewers"> Reviews </string>
    <string name="close">close</string>
    <string name="based_on">Based On</string>
    <string name="customer_reviws">CUSTOMER REVIEWS</string>
    <string name="view_more_reviws">View More</string>
    <string name="writecomment">write your comment</string>
    <string name="submit">Submit</string>
    <string name="last_review">Last Reviews</string>
    <string name="high_review">More Review First</string>
    <string name="low_review">Low Review First</string>
    <string name="sort_based">Sort Based On</string>
    <string name="belong_to">belong to : </string>
    <string name="solidby">Brand: </string>
    <string name="photo_permission_deny">you can not add photo without accept permission</string>
    <string name="no_location_data_provided">No location Provided</string>
    <string name="service_not_available">Service not avialable</string>
    <string name="invalid_lat_long_used">Invalid location value</string>
    <string name="no_location_found">No location found</string>
    <string name="location_found">Location found</string>
    <string name="no_geocoder_available">No geocoder avialable</string>
    <string name="start">Start</string>
    <string name="detect_my_location">Detect my location</string>
    <string name="select_your_country">Select my country</string>
    <string name="search">Search For </string>
    <string name="search_by_country_name">Search by country name</string>
    <string name="addreviewsuccess">Your post will be checked before it gets published.</string>
    <string name="be_first_comment">Add First Comment</string>
    <string name="no_overview">No OverView Found For this product</string>
    <string name="hint_blockid">Block </string>
    <string name="hint_Neighborhood">Neighborhood </string>
    <string name="hint_area">Area</string>
    <string name="hint_address_name">Address(Street/House/Building)</string>
    <string name="hint_paci">PACI No. (Only for KSA, QATAR and Cash on Delivery)</string>
    <string name="hint_province">State/province</string>
    <string name="addaddress_success">Your address add successfully</string>
    <string name="phone">phone : </string>
    <string name="editaddress_success">your address updated successfully</string>
    <string name="hint_province_only">Province : </string>
    <string name="hint_cityy">City</string>
    <string name="hint_address_title">select address type </string>
    <string name="invalid_address_title">Invalid Address Title  </string>
    <string name="continue_with_email">Continue with email</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="concierge_description2">Looking for a specific perfume or makeup and skincare product from classical brands and difficult to locate? Tatayab personal shopper will get it for you.</string>
    <string name="tatayab_concierge">Tatayab Concierge</string>
    <string name="welcome_to">Welcome to</string>
    <string name="concierge_search_desc"> We find your product anywhere &amp; anytime</string>
    <string name="concierge_delivery_des">Delivered to your doorstep</string>
    <string name="concierge_free_des">Additional service fees are applied</string>
    <string name="concierge_steps">Follow these simple steps to get your favorite product delivered right at your doorstep in no time </string>
    <string name="upload_picture">Upload Picture</string>
    <string name="submit_request">Submit Request</string>
    <string name="enter_product_name_and_brand">Enter product name and brand</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="product_description">Product description</string>
    <string name="enter_small_details_about_product_brand_size_etc">Enter small details about product, brand, size, etc.</string>
    <string name="login_in_app">Register in the application</string>
    <string name="signin_app_with_secuitry_payment">Register the application and get secure purchases</string>
</resources>