<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar_viw"
            layout="@layout/toolbar_with_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_viw"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="start"
                android:text="@string/welcome_to"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/cairo_bold"
                android:gravity="start"
                android:text="@string/tatayab_concierge"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/refer_bg_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                style="@style/textFontMeduimStyle"
                android:gravity="start"
                android:text="@string/concierge_description2"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:srcCompat="@drawable/concierge_search_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:gravity="start"
                    android:text="@string/concierge_search_desc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:srcCompat="@drawable/concierge_delivery_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:gravity="start"
                    android:text="@string/concierge_delivery_des"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:srcCompat="@drawable/concierge_free_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:gravity="start"
                    android:text="@string/concierge_free_des"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                style="@style/textFontMeduimStyle"
                android:gravity="start"
                android:text="@string/concierge_steps"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/hint_Perfume_Name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/perfumeNameEditText"
                        style="@style/editDirectionStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/round_adress_input"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:scrollHorizontally="true"
                        android:hint="@string/enter_product_name_and_brand"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/nameEditText"
                        style="@style/editDirectionStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/round_adress_input"
                        android:inputType="text"
                        android:maxLines="1"
                        android:hint="@string/enter_your_full_name"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/hint_phone"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="@dimen/input_height"
                            android:layout_weight="1"
                            android:background="@drawable/round_adress_input"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/countryFlagImageView"
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_25sdp"
                                android:layout_weight="1"
                                android:src="@drawable/flag_bh"
                                app:civ_border_overlay="true" />

                            <TextView
                                android:id="@+id/phoneCodeEditText"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"
                                tools:text="+556" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/phoneEditText"
                            style="@style/editDirectionStyle"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/input_height"
                            android:layout_marginStart="5dp"
                            android:layout_weight="3"
                            android:background="@drawable/round_adress_input"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:hint="@string/enter_your_mobile_number"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_10sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/phone_code"
                            app:layout_constraintTop_toBottomOf="@+id/tv_phone_title" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/product_description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/commentEditText"
                        style="@style/editDirectionStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/round_adress_input"
                        android:inputType="text"
                        android:gravity="start"
                        android:lines="4"
                        android:padding="@dimen/_5sdp"
                        android:hint="@string/enter_small_details_about_product_brand_size_etc"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/upload_picture"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/base_loading"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone"
                    app:indicatorColor="@color/dark_blue"
                    app:indicatorName="BallClipRotateMultipleIndicator" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/round_adress_input"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/perfumeImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                      app:srcCompat="@drawable/ic_upload" />

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_below="@+id/mainContainer"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/colorPrimary"
            android:text="@string/submit_request"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </RelativeLayout>

</ScrollView>