<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">


    <include
        layout="@layout/toolbar_with_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_continue"
        style="@style/textFontbookStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:text="@string/login_in_app"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/larg_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_continue_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signin_app_with_secuitry_payment"
        android:textSize="@dimen/mini_larg_text"
        app:layout_constraintStart_toStartOf="@id/tv_continue"
        app:layout_constraintTop_toBottomOf="@id/tv_continue" />


    <TextView
        android:id="@+id/tv_facebook_login"
        style="@style/textFontMeduimStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/rounded_checkout_sigin_email"
        android:drawableStart="@drawable/facebook"
        android:gravity="center"
        android:visibility="gone"
        android:iconifiedByDefault="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/mini_larg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_google_login" />

    <TextView
        android:id="@+id/tv_google_login"
        style="@style/textFontMeduimStyle"
        android:layout_width="0dp"
         android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/rounded_checkout_sigin_email"
        android:drawableStart="@drawable/google_hangouts"
        android:gravity="center"
        android:iconifiedByDefault="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/continue_with_google"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/mini_larg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_continue_desc" />

    <TextView
        android:id="@+id/tv_email"
        style="@style/textFontMeduimStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/rounded_checkout_sigin_email"
        android:drawableStart="@drawable/ic_email"
        android:gravity="center"
        android:iconifiedByDefault="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/continue_with_email"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/mini_larg_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_facebook_login" />


    <TextView
        android:id="@+id/tv_guest_login"
        style="@style/textFontMeduimStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:iconifiedByDefault="true"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/continue_as_guest"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/mini_larg_text"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />


</androidx.constraintlayout.widget.ConstraintLayout>